# VIPtoolbox

./: .gitignore  README.md  main.py  requirements.txt
scripts/: init_github.py
toolbox/: __init__.py  _pyi_runtime.py  check_env.py  pyproject.toml
toolbox/core/: __init__.py  batch_template.py  browser.py  erp_product.py  ocr.py  pdf_edit_core.py  size_mapping.py  utils.py
toolbox/ui/: __init__.py  anti_ban_dialog.py  compress_page.py  file_tools_page.py  history_page.py  main_window.pyw  path_drop.py  pdf_helpers.py  rename_page.py  vip_image_finder_page.py
toolbox/ui/pages/: __init__.py  batch_erp_page.py
toolbox/参考数据/: 号型.xlsx  尺码表类型.xlsx
toolbox/尺码映射/: 使用说明.txt  字段别名补充.json  尺码别名.json
toolbox/表格模板/: QA.xlsx  唯品类目类型映射.xlsx  定价导入—扣点模式.xlsx  批量导入配件明细信息-模板.xlsx  批量新增商品资料.xlsx
toolbox/表格模板/属性/女装属性/: 半截裙.xlsx  女士时尚防晒衣.xlsx  女士皮衣皮草.xlsx  女式T恤.xlsx  女式休闲裤.xlsx  女式卫衣.xlsx  女式外套.xlsx  女式夹克.xlsx  女式棉衣.xlsx  女式毛衣.xlsx  女式牛仔裤.xlsx  女式羽绒服.xlsx  女式背心.xlsx  女式衬衫.xlsx  女式针织衫.xlsx
toolbox/表格模板/属性/男装属性/: 男士时尚防晒衣.xlsx  男式Polo衫.xlsx  男式T恤.xlsx  男式休闲裤.xlsx  男式卫衣.xlsx  男式外套.xlsx  男式大衣.xlsx  男式夹克.xlsx  男式棉衣.xlsx  男式毛衣.xlsx  男式牛仔裤.xlsx  男式皮衣皮草.xlsx  男式羽绒服.xlsx  男式背心马夹.xlsx  男式衬衫.xlsx  男式针织衫.xlsx  男式风衣.xlsx
toolbox/表格模板/试穿报告/: 女装试穿报告(上装).xlsx  女装试穿报告(下装）.xlsx  男装试穿报告(上装).xlsx  男装试穿报告(下装）.xlsx
