[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "youxiangfa-vip-toolbox"
version = "4.29"
description = "有想法唯品上新工具箱 - 电商运营自动化工具"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "numpy>=1.24.0,<3",
    "pandas>=1.5.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.21.0",
    "openpyxl>=3.1.0",
    "xlwt>=1.3.0",
    "playwright>=1.40.0",
    "rembg>=2.0.0",
    "onnxruntime>=1.16.0",
]

[tool.setuptools.packages.find]
include = ["toolbox*"]

[tool.setuptools.package-data]
toolbox = ["**/*.json", "**/*.onnx", "**/*.exe", "**/*.dll", "**/*.txt", "**/*.xlsx"]
